javascript_versioned_docs/version-0.11.0/reference/dyte-meeting-events.mdx
---
sidebar_position: 7
---

# DyteMeeting.Events

`DyteMeeting.Events` is an enum that enumerates different events that can occur in between a meeting.

```ts
DyteMeeting.Events {
	connect,
	meetingJoined,
	disconnect,
	meetingEnded,
	participantJoin,
	participantLeave,
	chatMessage,
	roomMessage,
	message,
	activeSpeaker,
	recordingStarted,
	recordingStopped
}
```

| Event            | Triggered when                                                                                                                                                                                    |
| ---------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| connect          | the participant has connected to the meeting but hasn’t started producing or consuming content streams - think of this as establishing a successful connection to the meeting and nothing else    |
| meetingJoined    | the participant actually joins the meeting, and can start producing as well as consuming content streams                                                                                          |
| disconnect       | the participant gets disconnected from the meeting for any reason                                                                                                                                 |
| meetingEnded     | the meeting is ended by the host or by the organization (as an admin function)                                                                                                                    |
| participantJoin  | another participant joins the meeting ("join" here as the same context as the `meetingJoined` event)                                                                                              |
| participantLeave | another participant disconnects from the meetin ("disconnect" here as the same context as the `disconnect` event)                                                                                 |
| chatMessage      | the participant receives a chat message                                                                                                                                                           |
| roomMessage      | a custom message is broadcast to all participants in the meeting                                                                                                                                  |
| message          | a custom message is targeted to a particular participant in the meeting and only the target participant receives this event                                                                       |
| activeSpeaker    | the active speaker in the meeting changes - active speaker is the participant whose audio level has most recently been the highest (kind of like LRU with the selection factor being audio level) |
| recordingStarted | a recording of the meeting is started by the host or by the organization (as an admin function)                                                                                                   |
| recordingStopped | a recording of the meeting is stopped by the host or by the organization (as an admin function)                                                                                                   |
